fix few options style for mv2
Squashed commit of the following:

commit f093a368572e2e3ad064634cb205034c7e2bbb68
Merge: bcba3c5d1 b538f1d82
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 26 20:49:08 2024 +0300

    Merge branch 'v5.0' into fix/mv2-styles-001

commit bcba3c5d193c3f127d48211ece29d17d5878be52
Merge: fdaaff4c9 82d734030
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 26 20:43:25 2024 +0300

    Merge branch 'v5.0' into fix/mv2-styles-001

commit fdaaff4c9b09f7e0e91371f9b56865f2d8c57dcd
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Aug 24 01:52:20 2024 +0300

    fix few options style for mv2

--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -124,6 +124,7 @@
     --stroke-icons-error-icon-hovered: var(--red-60);
     --stroke-icons-product-icon-default: var(--product-primary-50);
     --stroke-icons-product-icon-hovered: var(--product-primary-60);
+    --stroke-inputs-error-input-stroke-default: var(--red-50);
     --stroke-inputs-active-input-stroke-default: var(--gray-50);
     --text-buttons-primary-default: var(--gray-0);
     --text-buttons-secondary-green-default: var(--product-primary-50);
